--- a/.config/i3/config
+++ b/.config/i3/config
@@ -76,7 +76,7 @@ exec --no-startup-id syncthing -no-browser -no-restart -logflags=0
 ################################################################################
 
 # needed for i3-gaps
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border pixel 2
 
 # gaps
 gaps inner 8
@@ -238,6 +238,26 @@ assign [class="VisualStudioCode"] $ws2
 assign [class="TelegramDesktop"] $ws10
 assign [class="Slack"] $ws10
 assign [class="Skype"] $ws10
+
+################################################################################
+# Monitors
+################################################################################
+
+set $monitor1 HDMI-0
+set $monitor2 DVI-D-0
+set $monitor3 DP-1
+
+workspace $ws1 output $monitor1
+workspace $ws2 output $monitor1
+
+workspace $ws4 output $monitor2
+workspace $ws5 output $monitor2
+workspace $ws6 output $monitor2
+workspace $ws7 output $monitor2
+
+workspace $ws8 output $monitor3
+workspace $ws9 output $monitor3
+workspace $ws10 output $monitor3
 
 ################################################################################
 # Window options
