--- a/.config/i3/config
+++ b/.config/i3/config
@@ -66,7 +66,7 @@ exec --no-startup-id setxkbmap -layout \\"us,ru,ua\\" -option 'grp:alt_shift_tog
 exec --no-startup-id xautolock -time 15 -locker "$lock"
 
 # increate key repeat rate a bit
-exec --no-startup-id xset r rate 170 20
+exec --no-startup-id xset r rate 200 20
 
 # run syncthing server
 exec --no-startup-id syncthing -no-browser -no-restart -logflags=0
@@ -231,7 +231,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9; workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10; workspace $ws10
 
 # assign certain applications to the corresponding workspaces
-assign [class="Google-chrome"] $ws3
+# assign [class="Google-chrome"] $ws3
 assign [class="qutebrowser"] $ws3
 assign [class="Firefox"] $ws3
 assign [class="VisualStudioCode"] $ws2
@@ -274,6 +274,8 @@ for_window [class="mpv"] floating enable
 for_window [class="vlc"] floating enable
 for_window [class="app.py"] floating enable
 for_window [class="matplotlib"] floating enable
+for_window [title="AugmentedRealityView"] floating enable
+for_window [title="DrivableAreaDumpPlayer"] floating enable move left 400 px, move up 400 px
 
 ################################################################################
 # Window bindings
