--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -56,7 +56,7 @@ font-5 = "Font Awesome 5 Brands:pixelsize=12;1"
 ; modules-left = bspwm i3
 modules-left = i3 xwindow
 ; modules-center = mpd
-modules-center =
+modules-center = spotify previous playpause next 
 ; modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
 modules-right = pulseaudio xkeyboard memory cpu wlan eth battery scriptdate uptime
 
@@ -78,6 +78,8 @@ tray-background = ${colors.background}
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+enable-ipc = true
 
 [module/xwindow]
 type = internal/xwindow
@@ -250,7 +252,7 @@ format-disconnected =
 
 [module/eth]
 type = internal/network
-interface = enp0s20u2
+interface = enp0s31f6
 interval = 3.0
 
 format-connected = <label-connected>
@@ -430,3 +432,42 @@ tail = false
 click-left = gsimplecal
 interval = 1
 format-underline = #0a6cf5
+
+[module/previous]
+type = custom/ipc
+format-font = 3
+; Default
+hook-0 = echo ""
+; When spotify active
+hook-1 = echo ""
+click-left = "spotifyctl -q previous"
+
+
+[module/next]
+type = custom/ipc
+format-font = 3
+; Default
+hook-0 = echo ""
+; When spotify active
+hook-1 = echo ""
+click-left = "spotifyctl -q next"
+
+
+[module/playpause]
+type = custom/ipc
+format-font = 3
+; Default
+hook-0 = echo ""
+; Playing
+hook-1 = echo ""
+; Paused
+hook-2 = echo ""
+click-left = "spotifyctl -q playpause"
+
+
+[module/spotify]
+type = custom/ipc
+; Default
+hook-0 = echo ""
+; Playing/paused show song name and artist
+hook-1 = spotifyctl -q status --format ' %artist%: %title%'
